docs: swagger @route=api/v1/todos (all)
